<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.view.RegisterFragment">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/img_login_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="@id/imgLogin"
            app:layout_constraintEnd_toEndOf="@id/imgLogin"
            app:layout_constraintTop_toTopOf="@id/imgLogin"
            app:layout_constraintBottom_toBottomOf="@id/imgLogin"
            android:layout_marginBottom="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/bg_ic_skip_shape"
            android:textColor="@color/colorGreenDark"
            android:fontFamily="@font/inter_18pt_regular"
            android:text="@string/skip"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="175dp"
            android:layout_marginBottom="-25dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/inter_18pt_regular"
                    android:text="@string/sign_up"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_google"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="4dp"
                    app:cardBackgroundColor="@color/colorTransparent"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/txtSignUp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        android:src="@drawable/ic_google" />
                </androidx.cardview.widget.CardView>



                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/or_register_with_email"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_google" />


                <TextView
                    android:id="@+id/txtYourName"
                    android:layout_width="122dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/user_name"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toBottomOf="@id/txtYourName"
                    app:boxBackgroundColor="@color/colorTransparent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/type_your_username" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="122dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/email_address"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/edt_username" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    app:boxBackgroundColor="@color/colorTransparent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/type_your_email" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="122dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/password"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/edt_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toBottomOf="@id/textView3"
                    app:boxBackgroundColor="@color/colorTransparent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:hint="@string/type_your_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="6dp"
                    android:elevation="3dp"
                    android:gravity="center_horizontal"
                    android:paddingVertical="15dp"
                    android:stateListAnimator="@null"
                    android:text="@string/sign_up"
                    android:fontFamily="@font/inter_18pt_regular"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_password" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="395dp" />


                <TextView
                    android:id="@+id/txtToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="43dp"
                    android:text="@string/already_have_an_account_login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>