<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.view.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileScene"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgIngredientItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:padding="2dp"
            android:layout_marginTop="80dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            app:strokeColor="@color/colorGreen"
            app:strokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_onboarding1"
            />
        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="ZiadElshemy"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@id/imgIngredientItem"
            app:layout_constraintStart_toStartOf="@id/imgIngredientItem"
            app:layout_constraintTop_toBottomOf="@id/imgIngredientItem"
            tools:text="ZiadElshemy" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="ziad@gmail.com"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@id/imgIngredientItem"
            app:layout_constraintStart_toStartOf="@id/imgIngredientItem"
            app:layout_constraintTop_toBottomOf="@id/txtUsername"
            tools:text="ziad@gmail.com" />


        <Button
            android:id="@+id/btnYourFav"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_heart_gray"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/colorGreenDark"
            android:text="@string/your_favorite"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />


        <Button
            android:id="@+id/btnYourPlans"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_calendar"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/colorGreenDark"
            android:text="@string/your_plans"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnYourFav" />

        <Button
            android:id="@+id/btnBackup"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_backup"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/colorGreenDark"
            android:text="@string/backup_your_data"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnYourPlans" />



        <Button
            android:id="@+id/btnDownload"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_download"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/colorGreenDark"
            android:text="@string/download_data"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackup" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="138dp"
            android:layout_height="51dp"
            android:backgroundTint="@color/md_theme_light_error"
            android:text="@string/log_out"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDownload" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noInternetScene"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/no_internet_image"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_marginTop="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/no_internet_lottie" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connection"
                android:textColor="@color/colorGreenDark"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_internet_image"
                />

            <TextView
                android:id="@+id/no_internet_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="64dp"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorGreenDark"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/check_internet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>