<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_test_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.screens.ThirdScreen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgOnboarding3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/img_lottie_third"
        />

    <ImageView
        android:id="@+id/img_shape"
        android:layout_width="770dp"
        android:layout_height="331dp"
        android:background="@drawable/onboarding_bg_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtOnboardingTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/inter_18pt_regular"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_third_name"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOnboarding3" />

    <TextView
        android:id="@+id/txtOnboardingDesc3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/inter_18pt_regular"
        android:gravity="center"
        android:text="@string/onboarding_third_desc"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOnboardingTitle3" />

    <Button
        android:id="@+id/btnOnboardingFinish3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:elevation="3dp"
        android:gravity="center_horizontal"
        android:paddingVertical="15dp"
        android:stateListAnimator="@null"
        android:text="@string/get_started"
        android:fontFamily="@font/inter_18pt_regular"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOnboardingDesc3" />

</androidx.constraintlayout.widget.ConstraintLayout>